@@ -48,5 +48,10 @@ To vote for a bug:
        may rebalance your votes as necessary.
 </ul>
 
+You will automatically get email notifying you of any changes that
+occur on bugs you vote for.
+
+<p>
+
 You may review your votes at any time by clicking on the "Change your
 password or preferences" link at the bottom of the query page.
