@@ -10,6 +10,13 @@ query the CVS tree.  For example,
 will tell you what has been changed in the last week.
 
 
+10/7/99 Added voting ability.  You must run the new script
+"makevotestable.sh".  You must also feed the following to mysql:
+
+	alter table products add column votesperuser smallint not null;
+
+
+
 9/15/99 Apparently, newer alphas of MySQL won't allow you to have
 "when" as a column name.  So, I have had to rename a column in the
 bugs_activity table.  You must feed the below to mysql or you won't
